--- a/app/views/expense_lists/_expenses_in_month.html.erb
+++ b/app/views/expense_lists/_expenses_in_month.html.erb
@@ -1,22 +1,24 @@
+<!-- CREATE EXPENSE TABLE ROWS -->
 <% expenses.each do |expense| %>
 <tr>
   <td class="col-md-1">
     <%= link_to '', edit_expense_list_expense_path(@expense_list, expense), {class: 'btn btn-default btn-xs glyphicon glyphicon-pencil glyph-button'} %>
     <%= link_to '', expense_list_expense_path(@expense_list, expense), {method: "delete", data: { confirm: "Bist du dir sicher, dass du den Eintrag löschen willst?" }, class: 'btn btn-default btn-xs glyphicon glyphicon-trash glyph-button'} %>
+    <%= link_to '', '#', {"data-toggle" => "modal","data-target" => "#modal-#{expense.id}", class: 'btn btn-default btn-xs glyphicon glyphicon-search glyph-button'} %>
+    <%= render partial: 'shared/modal', locals: {expense: expense} %>
   </td>
   <td><%= expense.when.strftime("%d.%m") %></td>
   <td><%= expense.where %></td>
   <td><%= expense.user && expense.user.name || "???" %></td>
   <td><%= "#{expense.expenses_in_euro}€" %></td>
   <td><%= expense.cash_desk %></td>
-  <td><%= expense.comment %></td>
 </tr>
 <% end %>
 <tr>
   <td class="monthly-totals-row" colspan=4></td>
-  <td class="monthly-totals-row"><b><%= sum_expenses_collection expenses %></td></b>
-  <td class="monthly-totals-row" colspan="2"></td>
+  <td class="monthly-totals-row"><%= sum_expenses_collection expenses %>
+  <td class="monthly-totals-row" colspan="1"></td>
 </tr>
 <tr>
-  <td colspan="7" class="spacer-row"></td>
+  <td colspan="6" class="spacer-row"></td>
 </tr>
