--- a/app/views/expense_lists/index.html.erb
+++ b/app/views/expense_lists/index.html.erb
@@ -19,7 +19,7 @@
           </div>
           <div class='panel-footer'>
             <small>Expenses in <%= "#{current_month_name}" %>:</small>
-            <b><%= "#{expenses_in_current_month}€" %></b>
+            <b><%= "#{expenses_in_current_month(expense_list)}€" %></b>
             <small><%= "(#{euros_left_in_current_month(expense_list)}€ left)" if expense_list.budget_in_euro %> </small>
           </div>
         </div>
