--- a/app/views/expense_lists/index.html.erb
+++ b/app/views/expense_lists/index.html.erb
@@ -18,9 +18,9 @@
             </p>
           </div>
           <div class='panel-footer'>
-            <small>Expenses in <%= "#{current_month_name}" %>:</small>
+            Expenses in <%= "#{current_month_name}" %>:
             <b><%= "#{expenses_in_current_month(expense_list)}€" %></b>
-            <small><%= "(#{euros_left_in_current_month(expense_list)}€ left)" if expense_list.budget_in_euro %> </small>
+            <%= "(#{euros_left_in_current_month(expense_list)}€ left)" if expense_list.budget_in_euro %>
           </div>
         </div>
       </div>
