--- a/app/views/expense_lists/index.html.erb
+++ b/app/views/expense_lists/index.html.erb
@@ -32,7 +32,7 @@
   </div>
   <div class="row">
     <div class='col-xs-12 col-lg-3 col-md-4'>
-      <%= link_to "Create new expense list", new_expense_list_path, {class: 'btn btn-default btn-primary btn-success'} %>
+      <%= link_to "Create new expense list", new_expense_list_path, {class: 'btn btn-default btn-primary btn-success', id: 'asd'} %>
     </div>
   </div>
 </div>
