--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,7 +1,7 @@
-<div class="container-fluid">
+<div class='container-fluid'>
   <% flash.each do |type, message| %>
   <div class="alert alert-<%= bootstrap_class_for(type) %>", id="flash-messages">
-    <button class="close btn-xs glyphicon glyphicon-ok glyph-button" data-dismiss="alert"></button>
+    <button class='close btn-xs glyphicon glyphicon-ok glyph-button' data-dismiss='alert'></button>
     <%= message %>
   </div>
   <% end %>
