--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,2 @@
-<div class="container-fluid">
+<div class='container-fluid'>
 <h4>This is a small app designed to help keeping track with expenses throughout different accounts! </h4>
