--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -1,18 +1,18 @@
 <!-- DEFINE COMMENT MODAL -->
-<div class="modal fade" id="modal-<%= expense.id %>">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+<div class='modal fade' id='modal-<%= expense.id %>'>
+  <div class='modal-dialog' role='document'>
+    <div class='modal-content'>
+      <div class='modal-header'>
+        <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
           <span aria-hidden="true">&times;</span>
         </button>
-        <h4 class="modal-title">Comment for expense from <%= "'#{expense.when.strftime}'" %></h4>
+        <h4 class='modal-title'>Comment for expense from <%= "'#{expense.when.strftime}'" %></h4>
       </div>
-      <div class="modal-body">
-        <p><%= expense.comment.empty? && "No comment supplied..." || expense.comment %></p>
+      <div class='modal-body'>
+        <p><%= expense.comment.empty? && 'No comment supplied...' || expense.comment %></p>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      <div class='modal-footer'>
+        <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
