--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -34,7 +34,7 @@
 
   <fieldset class="form-group row #{"has-error" if f.object.errors.include?(:comment)}">
     <div class='col-xs-3'>
-      <%= f.text_field :comment, {class: 'form-control', placeholder: 'Comment, e.g. 'Bought lot's of coffee...'} %>
+      <%= f.text_field :comment, {class: 'form-control', placeholder: "Comment, e.g. 'Bought lot's of coffee..."} %>
     </div>
     <div class='col-xs-3'>
       <span class='help-block'>
