--- a/app/views/expense_lists/index.html.erb
+++ b/app/views/expense_lists/index.html.erb
@@ -19,8 +19,8 @@
           </div>
           <div class='panel-footer'>
             Expenses in <%= "#{current_month_name}" %>:
-            <b><%= "#{sum_of_exp_in_month(expense_list, current_month, current_year)}€" %></b>
-            <%= "(#{euros_left_in_month(expense_list, current_month, current_year)}€ left)" if expense_list.budget_in_euro %>
+            <b><%= "#{expense_list.sum_of_exp_in_month(current_month, current_year)}€" %></b>
+            <%= "(#{expense_list.euros_left_in_month(current_month, current_year)}€ left)" if expense_list.budget_in_euro %>
           </div>
         </div>
       </div>
