--- a/app/views/notifier/expense_list_deleted.erb
+++ b/app/views/notifier/expense_list_deleted.erb
@@ -1,1 +1,6 @@
-Hinweis: die Ausgabenliste '<%= @expense_list_name %>' wurde gelöscht.
+<h2>Expense Tracker notification - expense list <%= @expense_list.name %> deleted</h2>
+
+Attention: The expense list '<%= @expense_list_name %>' has been deleted!
+
+Greetings,
+your expense tracker
