Small layout improvements for Notifier views

--- a/app/views/notifier/expense_list_deleted.erb
+++ b/app/views/notifier/expense_list_deleted.erb
@@ -1,6 +1,8 @@
-<h2>Expense Tracker notification - expense list <%= @expense_list.name %> deleted</h2>
+<h3>Expense Tracker notification - expense list <%= @expense_list.name %> deleted!</h3>
 
 Attention: The expense list '<%= @expense_list_name %>' has been deleted!
 
-Greetings,
-your expense tracker
+<p>
+  Greetings,
+  your expense tracker
+</p>
