Yet another bugfix for mailer: Mail on list removal does work now

--- a/app/views/notifier/expense_list_deleted.erb
+++ b/app/views/notifier/expense_list_deleted.erb
@@ -1,6 +1,6 @@
 <h3>Expense Tracker notification - expense list <%= @expense_list.name %> deleted!</h3>
 
-Attention: The expense list '<%= @expense_list_name %>' has been deleted!
+Attention: The expense list '<%= @expense_list.name %>' has been deleted!
 
 <p>
   Greetings,
