--- a/app/views/expense_lists/show.html.erb
+++ b/app/views/expense_lists/show.html.erb
@@ -3,6 +3,9 @@
   <p>
     <p class='text-muted'><%= @expense_list.description %></p>
   </p>
+  <p class='text-muted small'>
+    <%= link_to 'Download as CSV', expense_list_path(@expense_list, format: "csv") %>
+  </p>
 </div>
 
 <div class='container-fluid'>
