Added user stats modal skeleton

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,3 +125,7 @@ $table_background: rgb(246, 218, 218);
     margin-left: 40px;
     margin-right: 40px;
 }
+
+.user-stats-table {
+  margin-top: 10px;
+}
