--- a/app/views/expense_lists/show.html.erb
+++ b/app/views/expense_lists/show.html.erb
@@ -3,7 +3,9 @@
   <p class='text-muted'><%= @expense_list.description %></p>
   <p class='text-muted'><i>Total expenses in list: <%= @expense_list.total_expenses_in_list %></i></p>
   <p class='text-muted small'>
-    <%= link_to 'Download as CSV', expense_list_path(@expense_list, format: "csv") %>
+    <%= link_to 'Download as CSV', expense_list_path(@expense_list, format: "csv") %> |
+    <%= link_to 'Show user stats', '#', { 'data-toggle' => 'modal','data-target' => "#user_stats_modal" } %>
+    <%= render partial: 'shared/modals/user_stats_modal', locals: {expense_list: @expense_list} %>
   </p>
 </div>
 
