--- a/app/views/shared/modals/_user_stats_modal.erb
+++ b/app/views/shared/modals/_user_stats_modal.erb
@@ -11,7 +11,7 @@
       <div class='modal-body'>
           The following table lists the sums of expenses by user <small><%= "(#{simple_date(expense_list.created_at)} - #{simple_date(Date.today)})" %></small>
           <table class='table table table-striped table-bordered table-condensed user-stats-table' cellspacing="0">
-            <thead>
+            <thead class="month-row">
               <tr>
                 <th>Who</th>
                 <th>Total</th>
@@ -25,6 +25,10 @@
                 <td><%= expenses.map(&:expenses_in_euro).reduce(&:+) %>€</td>
               </tr>
               <% end %>
+              <tr class="monthly-totals-row">
+                <td>Sum</td>
+                <td><b><%= expense_list.total_expenses_in_list%>€</b></td>
+              </tr>
             </tbody>
           </table>
       </div>
