Rename date column of expense model

--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -8,7 +8,7 @@
   <tbody>
     <% @expenses.each do |expense| %>
     <td>asd</td>
-    <td><%= expense.when %></td>
+    <td><%= expense.expense_date %></td>
     <td><%= expense.where %></td>
     <td><%= expense.expenses_in_euro %></td>
     <% end %>
