--- a/app/views/expense_lists/_expenses_in_month.html.erb
+++ b/app/views/expense_lists/_expenses_in_month.html.erb
@@ -1,5 +1,5 @@
 <!-- CREATE EXPENSE TABLE ROWS -->
-<% expenses.sort_by { |e| e.when }.each do |expense| %>
+<% expenses.sort_by { |e| e.expense_date }.each do |expense| %>
 <tr>
   <td class='col-md-1'>
     <%= link_to '', edit_expense_list_expense_path(@expense_list, expense), {class: 'btn btn-default btn-xs glyphicon glyphicon-pencil glyph-button'} %>
@@ -7,7 +7,7 @@
     <%= link_to '', '#', {'data-toggle' => 'modal','data-target' => "#modal-#{expense.id}", class: 'btn btn-default btn-xs glyphicon glyphicon-search glyph-button'} %>
     <%= render partial: 'shared/modals/expense_comment_modal', locals: {expense: expense} %>
   </td>
-  <td><%= expense.when.strftime("%d.%m") %></td>
+  <td><%= expense.expense_date.strftime("%d.%m") %></td>
   <td><%= expense.where %></td>
   <td><%= expense.user && expense.user.name || '???' %></td>
   <td><%= "#{expense.expenses_in_euro}€" %></td>
