--- a/app/views/shared/modals/_expense_comment_modal.html.erb
+++ b/app/views/shared/modals/_expense_comment_modal.html.erb
@@ -6,7 +6,7 @@
         <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
           <span aria-hidden="true">&times;</span>
         </button>
-        <h4 class='modal-title'>Comment for expense from <%= "'#{expense.when.strftime}'" %></h4>
+        <h4 class='modal-title'>Comment for expense from <%= "'#{expense.expense_date}'" %></h4>
       </div>
       <div class='modal-body'>
         <p><%= expense.comment.empty? && 'No comment supplied...' || expense.comment %></p>
