--- a/app/views/expense_lists/_expenses_in_list.html.haml
+++ b/app/views/expense_lists/_expenses_in_list.html.haml
@@ -1,4 +1,4 @@
-- expenses.sort_by { |e| e.expense_date }.each do |expense|
+- expenses.each do |expense|
   %tr
     %td{class: 'col-md-1'}
       = link_to '', edit_expense_list_expense_path(@expense_list, expense), {class: 'btn btn-default btn-xs glyphicon glyphicon-pencil glyph-button'}
@@ -10,3 +10,15 @@
     %td= expense.user && expense.user.name || '???'
     %td= "#{expense.expenses_in_euro}€"
     %td= expense.cash_desk
+
+%tr
+  %td{class: 'monthly-totals-row', colspan: '4'}
+  %td{class: 'monthly-totals-row', id: 'sum_of_exp_in_month'}
+    = "#{expense_list.sum_of_exp_in_month(month, year)}€"
+  %td{class: 'monthly-totals-row', colspan: '1'}
+- if expense_list.budget_in_euro
+  %tr
+    %td{class: 'monthly-totals-row', colspan: '4'}
+    %td{class: 'monthly-totals-row euros_left_in_month'}
+      %b= "#{expense_list.budget_in_euro - expense_list.sum_of_exp_in_month(month, year)}€ left in month"
+    %td{class: 'monthly-totals-row', colspan: '4'}
