--- a/app/views/expense_lists/_expense_list.html.haml
+++ b/app/views/expense_lists/_expense_list.html.haml
@@ -1,8 +1,11 @@
-.col-xs-12.col-lg-3.col-md-4
+.col-xs-12.col-lg-3.col-md-4{id: "expense_list_#{expense_list.id}"}
   .panel.panel-default
     .panel-heading
       = link_to expense_list.name, expense_list_path(expense_list)
     .panel-body
+      .links
+        = link_to 'Modify list', edit_expense_list_path(expense_list), remote: true
+        = link_to 'Delete list', expense_list_path(expense_list), method: 'delete', remote: true
       .description
       %p
       - if expense_list.description.present?
