--- a/app/assets/stylesheets/expense_lists.scss
+++ b/app/assets/stylesheets/expense_lists.scss
@@ -1,8 +1,75 @@
-// Place all the styles related to the expenses controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import 'colors';
 
+// PANELS
+.panel-heading {
+  background-color: $navbar-gray;
+  font: bold;
+  font-size: 16px;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.panel-group .panel {
+    margin-bottom: 15px;
+    border-radius: 4px;
+    padding-left: 0px;
+    &:hover {
+      border-color: rgba(187, 82, 82, 0.8);
+    }
+}
+
+.panel-footer {
+  font-style: italic;
+}
+
+.create-expense-list-button {
+  font-size: 20px;
+}
+
+.center {
+  text-align: center;
+  padding-top: 20px;
+}
+
+// FORM
 .expense_lists_form {
   padding-top: 15px;
   display: none;
+}
+
+// TABLE
+.month-row {
+  background-color: darken($navbar-gray, 5);
+  td {
+    font-style: italic;
+  }
+}
+
+.monthly-totals-row {
+  background-color: lighten($navbar-gray, 5);
+  font-style: italic;
+  border-collapse: separate;
+  border-spacing: 0 20px;
+  border-style: none;
+}
+
+.spacer-row {
+  border-collapse: separate;
+  border-spacing: 0 20px;
+  border-style: none;
+}
+
+.current-month-placeholder {
+  // border: 2px dashed rgb(246, 218, 218);
+  background-color: lighten($table_background, 5);;
+}
+
+.table_placeholder {
+  padding: 5px;
+}
+
+
+.user-stats-table {
+  margin-top: 10px;
 }
