--- a/app/views/expense_lists/_expense_list.html.haml
+++ b/app/views/expense_lists/_expense_list.html.haml
@@ -1,12 +1,15 @@
-.col-xs-12.col-lg-3.col-md-4{id: "expense_list_#{expense_list.id}"}
+.col-xs-12.col-lg-3.col-md-4{ id: "expense_list_#{expense_list.id}" }
   .panel.panel-default
     .panel-heading
-      .glyphicon.glyphicon-cog.pull-right
-      = link_to expense_list.name, expense_list_path(expense_list)
+      %h4= expense_list.name
+      %ul.nav.nav-pills
+        %li.dropdown
+          %a.dropdown-toggle.glyphicon.glyphicon-cog{ 'data-toggle': 'dropdown', href: '#expense_list_settings' }
+          %ul.dropdown-menu
+            %li= link_to 'Modify list', edit_expense_list_path(expense_list), remote: true
+            %li= link_to 'Delete list', expense_list_path(expense_list), method: 'delete', data: { confirm: 'Bist du dir sicher, dass du den Eintrag löschen willst?' }, remote: true
+      -# = link_to expense_list.name, expense_list_path(expense_list)
     .panel-body
-      .links
-        = link_to 'Modify list', edit_expense_list_path(expense_list), remote: true
-        = link_to 'Delete list', expense_list_path(expense_list), method: 'delete', data: { confirm: 'Bist du dir sicher, dass du den Eintrag löschen willst?' }, remote: true
       .description
       %p
       - if expense_list.description.present?
