--- a/app/views/expense_lists/index.html.haml
+++ b/app/views/expense_lists/index.html.haml
@@ -1,11 +1,12 @@
 .container-fluid
   .row
-    .panel-group{id: 'expense-lists'}
+    .panel-group{ id: 'expense-lists' }
       - if @expense_lists.any?
         = render @expense_lists
       - else
         %p There is no expense list yet...
+  .row.center
+    = link_to 'Create new expense list', new_expense_list_path, remote: true, class: 'btn btn-default btn-primary btn-success create-expense-list-button'
   .row
-    = link_to "Create new expense list", new_expense_list_path, remote: true, class: 'btn btn-default btn-primary btn-success'
-  .row
-    .expense_lists_form{style: "display: none;"}
+    .col-md-12
+      .expense_lists_form{style: 'display: none;'}
